--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ yarn-debug.log*
 yarn-error.log*
 .firebaserc
 firebase.json
+.firebase/hosting.YnVpbGQ.cache
+.idea/codeStyles/codeStyleConfig.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/modules.xml
+.idea/pager.iml
+.idea/vcs.xml
+.idea/workspace.xml
